--- a/admin.html
+++ b/admin.html
@@ -183,7 +183,7 @@
             mediaImage: media,
             videoDuration: duration,
             paragraphs: paragraphs,
-            hashtags: "#filmixo #viralfilm #trendingmovie #blockbuster #popular",
+            hashtags: "#VLzone #viralvideo #trending #viral #video_viral_2026",
             
             // Mapped Links
             downloadLink2: finalLink1080, // Adsterra
