--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VL-ZONE Download</title>
+    <title>FILMIXO Download</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 
@@ -128,7 +128,7 @@
 <body>
 
 <div class="main-wrapper">
-    <header><div class="logo-area">VL-ZONE</div></header>
+    <header><div class="logo-area">FILMIXO</div></header>
 
     <div style="display: flex; justify-content: center; overflow: hidden; width: 100%; margin: 5px 0">
         <div style="flex-shrink: 0;">
@@ -147,7 +147,7 @@
     <div id="container-247476cdf6d68a31797ec615e7b10572"></div>
 
     <footer class="site-footer">
-        Copyright © 2026 <b>vlzone.com</b>. All rights reserved.
+        Copyright © 2026 <b>filmixo.com</b>. All rights reserved.
     </footer>
 </div>
 
