--- a/download.html
+++ b/download.html
@@ -165,7 +165,7 @@
 
     // GitHub Pages ডোমেইন এবং রেফারার চেক লজিক
     const referrer = document.referrer;
-    const baseDomain = "vlzone.github.io/vdo/";
+    const baseDomain = "filmixo.github.io/movie/";
     const isValidEntry = referrer.includes(baseDomain + "post.html");
 
     async function loadPageData() {
