--- a/download.html
+++ b/download.html
@@ -165,7 +165,7 @@
 
     // GitHub Pages ডোমেইন এবং রেফারার চেক লজিক
     const referrer = document.referrer;
-    const baseDomain = "filmixo.github.io/movie/";
+    const baseDomain = "filmixo.github.io";
     const isValidEntry = referrer.includes(baseDomain + "post.html");
 
     async function loadPageData() {
@@ -234,7 +234,7 @@
                 } else {
                     // সরাসরি লিঙ্কে আসলে পপ-আপ আসবে এবং রিডাইরেক্ট হবে
                     alert("Unauthorized Access! Please complete the steps from the post page.");
-                    window.location.href = `https://${baseDomain}post.html?id=${postId}`;
+                    window.location.href = `https://${baseDomain}/movie/post.html?id=${postId}`;
                 }
             }
         }, 1000);
