--- a/download.html
+++ b/download.html
@@ -99,7 +99,7 @@
 
         .instruction-text { color: #aaa; font-size: 13px; margin: 8px 0; line-height: 1.4; }
 
-        .btn-wrapper { width: 100%; display: center; justify-content: center; margin-top: 5px; }
+        .btn-wrapper { width: 100%; display: flex; justify-content: center; margin-top: 5px; }
         
         .final-dl-btn { 
             display: flex; align-items: center; justify-content: center; 
