--- a/download.html
+++ b/download.html
@@ -97,7 +97,18 @@
             border: 1px solid var(--primary-gold);
         }
 
-        .instruction-text { color: #aaa; font-size: 13px; margin: 8px 0; line-height: 1.4; }
+        .instruction-text { 
+    color: #aaa; 
+    font-size: 13px; 
+    margin: 2px 0 8px 0; 
+    line-height: 1.4; 
+    
+    /* এই তিনটি লাইন মাস্ট যোগ করবেন */
+    width: 100%; 
+    display: block;
+    padding: 0 10px; /* ডানে-বামে একটু জায়গা রাখা যাতে কার্ডের সাথে লেগে না যায় */
+}
+
 
         .btn-wrapper { width: 100%; display: flex; justify-content: center; margin-top: 5px; }
         
