--- a/download.html
+++ b/download.html
@@ -147,7 +147,10 @@
         </div>
     </div>
 
-    <footer>Copyright © 2026 <b>filmixo.com</b>. All rights reserved.</footer>
+    <footer>
+    Copyright © 2026 <a href="index.html" style="color: #1da1f2; font-weight: bold; text-decoration: none;">filmixo.com</a>. All rights reserved.
+</footer>
+
 </div>
 
 <script type="module">
