--- a/download.html
+++ b/download.html
@@ -32,7 +32,9 @@
 
         /* সেকশন বর্ডার */
         .movie-card { 
-            width: 100%; padding: 15px; 
+            width: 100%; 
+            padding: 5px 15px 5px 15px;
+            padding: 15px; 
             border-top: 1px solid #e1e8ed; 
             border-bottom: 1px solid #e1e8ed; 
             text-align: center;
