--- a/download.html
+++ b/download.html
@@ -33,17 +33,16 @@
         /* সেকশন বর্ডার */
         .movie-card { 
             width: 100%; 
-            padding: 1px 15px 5px 15px;
             padding: 15px; 
-            border-top: 2px solid #e1e8ed; 
-            border-bottom: 2px solid #e1e8ed; 
+            border-top: 1px solid #e1e8ed; 
+            border-bottom: 1px solid #e1e8ed; 
             text-align: center;
         }
 
         /* থাম্বনেইল এরিয়া */
         .thumb-wrapper { 
             position: relative; width: 100%; aspect-ratio: 16/9; 
-            background: #000; border-radius: 12px; margin-bottom: 12px; 
+            background: #000; border-radius: 12px; margin-top: 1px; margin-bottom: 12px; 
             overflow: hidden; display: flex; align-items: center; justify-content: center; 
         }
         .movie-thumb { width: 100%; height: 100%; object-fit: contain; }
