--- a/download.html
+++ b/download.html
@@ -33,8 +33,7 @@
         /* সেকশন বর্ডার */
         .movie-card { 
             width: 100%; 
-            padding-top: 1px;
-            padding: 15px; 
+            padding: 1px 15px; 
             border-top: 1px solid #e1e8ed; 
             border-bottom: 1px solid #e1e8ed; 
             text-align: center;
