--- a/download.html
+++ b/download.html
@@ -152,6 +152,23 @@
 
             <div id="target-title" class="movie-title">Loading...</div>
             <div class="verify-tag"><i class="fa-solid fa-circle-check"></i> Verify Successful</div>
+
+  <div style="display: flex; justify-content: center; overflow: hidden; width: 100%;">
+  <script type="text/javascript">
+  atOptions = {
+  	'key' : 'fd8120b632b230ae9b293d2eb29be171',
+  	'format' : 'iframe',
+  	'height' : 50,
+  	'width' : 320,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://prototypesorting.com/fd8120b632b230ae9b293d2eb29be171/invoke.js"
+></script>
+  </div>
+                
             <p class="instruction-text">Fast download link is ready. Please click the button below to fast download.</p>
 
             <div class="btn-container">
