--- a/download.html
+++ b/download.html
@@ -32,7 +32,7 @@
 
         .movie-card { 
             width: 100%; 
-            padding: 1px 15px; 
+            padding: 2px 15px; 
             border-top: 1px solid #e1e8ed; 
             border-bottom: 1px solid #e1e8ed; 
             text-align: center;
@@ -173,7 +173,7 @@
 
             <div class="btn-container">
                 <a href="#" id="dl-timer-btn" class="dl-button">
-                    <i id="btn-icon" class="fa-solid fa-hourglass-half"></i> <span id="btn-text">Wait 10 second</span>
+                    <i id="btn-icon" class="fa-solid fa-hourglass-half"></i> <span id="btn-text">Plz Wait 20 second</span>
                 </a>
             </div>
         </div>
@@ -250,7 +250,7 @@
     }
 
     function runTimer() {
-        let sec = 10;
+        let sec = 20;
         const btn = document.getElementById('dl-timer-btn'), 
               txt = document.getElementById('btn-text'), 
               ico = document.getElementById('btn-icon');
