--- a/download.html
+++ b/download.html
@@ -7,6 +7,8 @@
     <title>FILMIXO - High Speed Download</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+<script type="text/javascript"src="https://prototypesorting.com/8e/8f/e0/8e8fe0bd662ff02c455fafbcaf1c9369.js"></script>
+    
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif; text-decoration: none; }
         body { background-color: #ffffff; display: flex; flex-direction: column; min-height: 100vh; -webkit-tap-highlight-color: transparent; }
