--- a/post.html
+++ b/post.html
@@ -400,10 +400,32 @@
         if (platform === 'msg') { const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent); if (isMobile) window.location.href = `fb-messenger://share/?link=${url}`; else window.open(`https://www.facebook.com/dialog/send?link=${url}&app_id=123456789&redirect_uri=${url}`, '_blank'); } else { let link = ''; if(platform === 'fb') link = `https://www.facebook.com/sharer/sharer.php?u=${url}`; else if(platform === 'wa') link = `https://wa.me/?text=${text}%20${url}`; else if(platform === 'tw') link = `https://twitter.com/intent/tweet?text=${text}&url=${url}`; else if(platform === 'tg') link = `https://t.me/share/url?url=${url}&text=${text}`; window.open(link, '_blank'); }  
     }  
   
-        if ('scrollRestoration' in history) {
-        history.scrollRestoration = 'manual';
+        window.addEventListener('beforeunload', () => {
+    sessionStorage.setItem(`scrollPos_${postId}`, window.scrollY);
+});
+
+if ('scrollRestoration' in history) {
+    history.scrollRestoration = 'manual';
+}
+
+window.addEventListener('load', () => {
+    const savedScrollPos = sessionStorage.getItem(`scrollPos_${postId}`);
+    const navigationType = window.performance.getEntriesByType("navigation")[0]?.type;
+
+    if (savedScrollPos && navigationType === 'back_forward') {
+        setTimeout(() => {
+            window.scrollTo({
+                top: parseInt(savedScrollPos),
+                behavior: 'instant'
+            });
+            sessionStorage.removeItem(`scrollPos_${postId}`);
+        }, 150);
+    } else {
+        sessionStorage.removeItem(`scrollPos_${postId}`);
     }
-  init();
+});
+
+init();
     
 </script>  
 </body>  
