--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <span><i class="fa-solid fa-location-dot"></i>🇺🇲 United States</span>
                 <span><i class="fa-regular fa-calendar"></i>Joined 13/12/2025</span>
             </div>
-            <p class="bio">VL-ZONE: One of the most popular and exciting sites for VL-ZONE Viral Videos, YouTube, Facebook, Instagram, TikTok & more—packed with the hottest trends to make your daily scroll fun and addictive!</p>
+            <p class="bio">FILMIXO:🍿 Ditch the wait, seize the cinema. We are the ultimate hub for downloading trending blockbusters, exclusive new releases, and premium cinematic escapes. Stop scrolling, start watching—your HD movie journey begins now.</p>
         </div>
 
         <div class="nav-bar">
