--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
         .notification.show { opacity: 1; }
 
         /* --- সার্চ ওভারলে --- */
-        #search-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: white; z-index: 1001; display: none; flex-direction: column; padding-top: 10px; }
-        .search-header { display: flex; align-items: center; padding: 0 10px; margin-bottom: 15px; }
+        #search-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: white; z-index: 1001; display: none; flex-direction: column; }
+        .search-header { display: flex; align-items: center; padding: 10px; border-bottom: 1px solid #e1e8ed; position: sticky; top: 0; background-color: white; z-index: 10; }
         .search-input-container { flex-grow: 1; margin: 0 10px; }
-        #search-input { width: 100%; padding: 10px 15px; border: 1px solid #ddd; border-radius: 25px; font-size: 16px; outline: none; }
+        #search-input { width: 100%; padding: 10px 15px; border: 1px solid #ddd; border-radius: 25px; font-size: 16px; outline: none; background-color: #f0f2f5; }
         .search-back-btn { background: none; border: none; font-size: 24px; color: #000; cursor: pointer; padding: 5px; -webkit-tap-highlight-color: transparent; user-select: none; }
         #search-results { padding: 0 15px; overflow-y: auto; flex-grow: 1; }
         .search-result-item { padding: 10px 0; border-bottom: 1px solid #eee; cursor: pointer; display: flex; align-items: center; gap: 10px; transition: background-color 0.1s; -webkit-tap-highlight-color: transparent; user-select: none; }
