--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         .bio { font-size: 15px; color: #0f1419; line-height: 1.2; word-spacing: normal; text-align: left; margin-bottom: 0; font-weight: 400; }
 
         /* --- নেভিগেশন বার --- */
-        .nav-bar { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; border-top: 1.5px solid #cfd9de; border-bottom: 1.5px solid #cfd9de; margin-bottom: 0px; background: #fff; position: sticky; top: 0; z-index: 100; }
+        .nav-bar { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; border-top: 1.5px solid #e1e8ed; border-bottom: 1.5px solid #e1e8ed; margin-bottom: 0px; background: #fff; position: sticky; top: 0; z-index: 100; }
         .nav-btn { flex: 1; min-width: 0; text-align: center; justify-content: center; padding: 8px 5px; margin: 0 4px; border-radius: 20px; font-size: 14px; font-weight: bold; cursor: pointer; border: 1px solid #e1e8ed; display: flex; align-items: center; gap: 4px; transition: background-color 0.1s ease; white-space: nowrap; -webkit-tap-highlight-color: transparent; user-select: none; }
         .nav-bar .nav-btn:first-child { margin-left: 0; } 
         .nav-bar .nav-btn:last-child { margin-right: 0; } 
