--- a/post.html
+++ b/post.html
@@ -66,8 +66,8 @@
     .share-icon:active { transform: scale(0.9); }
 
     /* --- রিলেটেড পোস্ট কার্ড --- */
-    .related-header { padding: 15px; font-weight: 800; color: #000000; border-bottom: 1px solid #e1e8ed; text-transform: uppercase; }  
-    .post-card { padding: 5px 15px 5px 15px; border-bottom: 1px solid #e1e8ed; display: flex; flex-direction: column; gap: 6px; }  
+    .related-header { padding: 15px; font-weight: 800; color: #000000; border-top: 2px solid #e1e8ed; border-bottom: 2px solid #e1e8ed; text-transform: uppercase; }  
+    .post-card { padding: 5px 15px 5px 15px; border-bottom: 1.5px solid #e1e8ed; display: flex; flex-direction: column; gap: 6px; }  
     .post-title, .post-excerpt { cursor: pointer; user-select: none; transition: color 0.1s ease; }
     .post-title:active { color: #1da1f2; } 
     .post-excerpt:active { color: #1da1f2; } 
