--- a/post.html
+++ b/post.html
@@ -55,7 +55,7 @@
     @keyframes luxuryGlow { 0% { box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); transform: scale(1); } 100% { box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); transform: scale(1.02); } }
 
     /* --- স্ট্যাটস সেকশন --- */  
-    .stats-section { padding: 12px 0; margin-top: 15px; border-top: 1px solid #e1e8ed; border-bottom: 1px solid #e1e8ed; display: flex; align-items: center; font-size: 15px; color: #536471; font-weight: 500; }  
+    .stats-section { padding: 12px 0; margin-top: 15px; border-top: 1px solid #e1e8ed; display: flex; align-items: center; font-size: 15px; color: #536471; font-weight: 500; }  
     .stats-left { display: flex; align-items: center; gap: 20px; flex-grow: 1; overflow: hidden; }  
     .view-stat { flex: 0 0 auto; display: flex; align-items: center; gap: 5px; font-weight: 500; font-size: 15px; color: #536471; }  
     .like-stat-container { flex: 1 1 auto; display: flex; justify-content: center; }  
