--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
 
     <div class="main-container">
         <div class="cover-photo">
-            <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/filmixo.com.jpg" 
-                 width="320" height="150" alt="Cover" decoding="sync" fetchpriority="high">
+            <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/filmixo.com.jpg" style="height: 150px; width: 100%;" alt="Cover" decoding="sync" fetchpriority="high"> 
         </div>
 
         <div class="profile-header-area">
