--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .profile-pic-container { margin-top: -75px; z-index: 2; }
         .profile-pic { width: 140px; height: 140px; border-radius: 50%; border: 4px solid white; background-color: #000; overflow: hidden; display: flex; justify-content: center; align-items: center; }
         .profile-pic img { width: 100%; height: 100%; object-fit: cover; }
-        .cover-photo { width: 100%; height: 150px; background-color: #f0f2f5; overflow: hidden; position: relative; display: block; } .cover-photo img { width: 100%; height: 150px; object-fit: cover; display: block; }
+        .cover-photo { width: 100%; aspect-ratio: 16 / 9; background-color: #f0f2f5; overflow: hidden; position: relative; display: block; } .cover-photo img { width: 100%; height: 100%; object-fit: cover; display: block; position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 1s ease-in-out; } .cover-photo img.active { opacity: 1; }
         .action-buttons { display: flex; gap: 8px; margin-top: 10px; }
         .btn { border: none; padding: 8px 16px; border-radius: 20px; font-size: 14px; font-weight: bold; color: white; cursor: pointer; display: flex; align-items: center; gap: 5px; transition: transform 0.1s; -webkit-tap-highlight-color: transparent; user-select: none; }
         .btn:active { transform: scale(0.95); }
@@ -151,9 +151,7 @@
 <body>
 
     <div class="main-container">
-        <div class="cover-photo">
-            <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/filmixo.com.jpg" style="height: 150px; width: 100%;" alt="Cover" decoding="sync" fetchpriority="high"> 
-        </div>
+    <div class="cover-photo" id="cover-slider"></div>
 
         <div class="profile-header-area">
             <div class="profile-pic-container">
@@ -266,6 +264,7 @@
         window.sendEmail = function() { window.location.href = `mailto:${CONFIG.CONTACT_EMAIL}`; }
         window.shareProfile = function() { const url = window.location.href.split('?')[0]; const title = "Secret Binodon"; const text = "Secret Binodon - The #1 Platform for Viral Videos! 🎥 Watch the latest trending videos all in one place. Visit now!"; if (navigator.share) { navigator.share({ title: title, text: text, url: url }).catch((error) => console.log('Share failed', error)); } else { navigator.clipboard.writeText(`${text} ${url}`); showNotification("Website link copied! 📋"); } }
         window.sharePost = function(id, title) { const url = window.location.origin + `/movie/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }
+        let sliderInterval; function startCoverSlider(posts) { const sc = document.getElementById('cover-slider'); const recent = posts.slice(0, 10); sc.innerHTML = recent.map((p, i) => `<img src="${p.mediaImage}" class="${i === 0 ? 'active' : ''}">`).join(''); let cur = 0; const imgs = sc.querySelectorAll('img'); if (imgs.length <= 1) { if(imgs.length === 1) imgs[0].classList.add('active'); return; } if (sliderInterval) clearInterval(sliderInterval); sliderInterval = setInterval(() => { imgs[cur].classList.remove('active'); cur = (cur + 1) % imgs.length; imgs[cur].classList.add('active'); }, 3000); }
 
         function adjustImageAspectRatio(imgElement) {
             const mediaContainer = imgElement.closest('.media-container');
@@ -441,8 +440,8 @@
             try {
                 const res = await fetch('posts.json');
                 const posts = await res.json();
-                allPosts = posts.sort((a, b) => new Date(b.uploadTime).getTime() - new Date(a.uploadTime).getTime());
-                document.getElementById('total-videos-count').innerText = formatCount(allPosts.length);
+                allPosts = posts.sort((a, b) => new Date(b.uploadTime).getTime() - new Date(a.uploadTime).getTime()); startCoverSlider(allPosts);
+                document.getElementById('total-videos-count').innerText = formatCount(allPosts.length); 
                 calculateTotalViews(); 
 
                 const savedPos = sessionStorage.getItem('index_scroll');
