--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         .profile-pic-container { margin-top: -75px; z-index: 2; }
         .profile-pic { width: 140px; height: 140px; border-radius: 50%; border: 4px solid white; background-color: #000; overflow: hidden; display: flex; justify-content: center; align-items: center; }
         .profile-pic img { width: 100%; height: 100%; object-fit: cover; }
-        .cover-photo { width: 100%; aspect-ratio: 16 / 9; background-color: #f0f2f5; overflow: hidden; position: relative; display: block; } .cover-photo img { width: 100%; height: 100%; object-fit: cover; display: block; position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 1s ease-in-out; } .cover-photo img.active { opacity: 1; }
+        .cover-photo { width: 100%; aspect-ratio: 21 / 9; background-color: #f0f2f5; overflow: hidden; position: relative; display: block; } 
+        .cover-photo-inner { display: flex; width: 100%; height: 100%; transition: transform 0.8s cubic-bezier(0.45, 0, 0.55, 1); } 
+        .cover-photo img { width: 100%; height: 100%; object-fit: cover; flex-shrink: 0; display: block; }
         .action-buttons { display: flex; gap: 8px; margin-top: 10px; }
         .btn { border: none; padding: 8px 16px; border-radius: 20px; font-size: 14px; font-weight: bold; color: white; cursor: pointer; display: flex; align-items: center; gap: 5px; transition: transform 0.1s; -webkit-tap-highlight-color: transparent; user-select: none; }
         .btn:active { transform: scale(0.95); }
@@ -264,7 +266,7 @@
         window.sendEmail = function() { window.location.href = `mailto:${CONFIG.CONTACT_EMAIL}`; }
         window.shareProfile = function() { const url = window.location.href.split('?')[0]; const title = "Secret Binodon"; const text = "Secret Binodon - The #1 Platform for Viral Videos! 🎥 Watch the latest trending videos all in one place. Visit now!"; if (navigator.share) { navigator.share({ title: title, text: text, url: url }).catch((error) => console.log('Share failed', error)); } else { navigator.clipboard.writeText(`${text} ${url}`); showNotification("Website link copied! 📋"); } }
         window.sharePost = function(id, title) { const url = window.location.origin + `/movie/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }
-        let sliderInterval; function startCoverSlider(posts) { const sc = document.getElementById('cover-slider'); const recent = posts.slice(0, 10); sc.innerHTML = recent.map((p, i) => `<img src="${p.mediaImage}" class="${i === 0 ? 'active' : ''}">`).join(''); let cur = 0; const imgs = sc.querySelectorAll('img'); if (imgs.length <= 1) { if(imgs.length === 1) imgs[0].classList.add('active'); return; } if (sliderInterval) clearInterval(sliderInterval); sliderInterval = setInterval(() => { imgs[cur].classList.remove('active'); cur = (cur + 1) % imgs.length; imgs[cur].classList.add('active'); }, 3000); }
+        let sliderInterval; function startCoverSlider(posts) { const sc = document.getElementById('cover-slider'); const recent = posts.slice(0, 10); if (!recent.length) return; sc.innerHTML = `<div id="slider-inner" class="cover-photo-inner">${recent.map(p => `<img src="${p.mediaImage}">`).join('')}</div>`; let cur = 0; const inner = document.getElementById('slider-inner'); if (recent.length <= 1) return; if (sliderInterval) clearInterval(sliderInterval); sliderInterval = setInterval(() => { cur = (cur + 1) % recent.length; inner.style.transform = `translateX(-${cur * 100}%)`; }, 4000); }
 
         function adjustImageAspectRatio(imgElement) {
             const mediaContainer = imgElement.closest('.media-container');
