--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         .cover-photo-inner { display: flex; width: 100%; height: 100%; will-change: transform; }
         .cover-photo img { width: 100%; height: 100%; object-fit: cover; flex-shrink: 0; display: block; background: #000; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        .fade-in-effect { animation: fadeIn 1.2s ease-in-out forwards; position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 2; }
+        .fade-in-effect { animation: fadeIn 1.2s ease-in-out forwards; position: absolute !important; top: 0; left: 0; width: 100%; height: 100%; z-index: 5; background: #000; }
         .action-buttons { display: flex; gap: 8px; margin-top: 10px; }
         .btn { border: none; padding: 8px 16px; border-radius: 20px; font-size: 14px; font-weight: bold; color: white; cursor: pointer; display: flex; align-items: center; gap: 5px; transition: transform 0.1s; -webkit-tap-highlight-color: transparent; user-select: none; }
         .btn:active { transform: scale(0.95); }
@@ -271,7 +271,6 @@
         window.shareProfile = function() { const url = window.location.href.split('?')[0]; const title = "Secret Binodon"; const text = "Secret Binodon - The #1 Platform for Viral Videos! 🎥 Watch the latest trending videos all in one place. Visit now!"; if (navigator.share) { navigator.share({ title: title, text: text, url: url }).catch((error) => console.log('Share failed', error)); } else { navigator.clipboard.writeText(`${text} ${url}`); showNotification("Website link copied! 📋"); } }
         window.sharePost = function(id, title) { const url = window.location.origin + `/movie/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }
         let sliderInterval; function startCoverSlider(posts) { const sc = document.getElementById('cover-slider'); const recent = posts.slice(0, 10); if (recent.length <= 1) return; setTimeout(() => { const slidesHTML = recent.map(p => `<img src="${p.mediaImage}" style="width:100%; height:100%; object-fit:cover; flex-shrink:0;">`).join(''); const sliderDiv = document.createElement('div'); sliderDiv.id = 'slider-inner'; sliderDiv.className = 'cover-photo-inner fade-in-effect'; sliderDiv.innerHTML = slidesHTML + `<img src="${recent[0].mediaImage}" style="width:100%; height:100%; object-fit:cover; flex-shrink:0;">`; sc.appendChild(sliderDiv); let cur = 0; const total = recent.length; function run() { if (sliderInterval) clearInterval(sliderInterval); sliderInterval = setInterval(() => { cur++; sliderDiv.style.transition = "transform 0.8s cubic-bezier(0.4, 0, 0.2, 1)"; sliderDiv.style.transform = `translateX(-${cur * 100}%)`; if (cur === total) { setTimeout(() => { sliderDiv.style.transition = "none"; cur = 0; sliderDiv.style.transform = `translateX(0)`; }, 800); } }, 3000); } run(); document.addEventListener("visibilitychange", () => { if (document.hidden) clearInterval(sliderInterval); else run(); }); }, 2000); }
-
         function adjustImageAspectRatio(imgElement) {
             const mediaContainer = imgElement.closest('.media-container');
             imgElement.onload = function() {
