--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         .profile-pic-container { margin-top: -75px; z-index: 2; }
         .profile-pic { width: 140px; height: 140px; border-radius: 50%; border: 4px solid white; background-color: #000; overflow: hidden; display: flex; justify-content: center; align-items: center; }
         .profile-pic img { width: 100%; height: 100%; object-fit: cover; }
-        .cover-photo { width: 100%; aspect-ratio: 21 / 9; overflow: hidden; position: relative; background: #000; }
-        .cover-photo-inner { display: flex; width: 100%; height: 100%; transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1); will-change: transform; position: absolute; top: 0; left: 100%; z-index: 5; }
+        .cover-photo { width: 100%; aspect-ratio: 21 / 9; overflow: hidden; position: relative; background: #ffffff; }
+        .cover-photo-inner { display: flex; width: 100%; height: 100%; transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1); will-change: transform; position: absolute; top: 0; left: 0; z-index: 1; }
         .cover-photo img { width: 100%; height: 100%; object-fit: cover; flex-shrink: 0; }
         .action-buttons { display: flex; gap: 8px; margin-top: 10px; }
         .btn { border: none; padding: 8px 16px; border-radius: 20px; font-size: 14px; font-weight: bold; color: white; cursor: pointer; display: flex; align-items: center; gap: 5px; transition: transform 0.1s; -webkit-tap-highlight-color: transparent; user-select: none; }
@@ -153,9 +153,7 @@
 <body>
 
     <div class="main-container">
-    <div id="cover-slider" class="cover-photo">
-    <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/FILMIXO.jpg" style="width: 100%; height: 100%; object-fit: cover;">
-</div>
+    <div id="cover-slider" class="cover-photo"></div>
 
         <div class="profile-header-area">
             <div class="profile-pic-container">
@@ -268,7 +266,7 @@
         window.sendEmail = function() { window.location.href = `mailto:${CONFIG.CONTACT_EMAIL}`; }
         window.shareProfile = function() { const url = window.location.href.split('?')[0]; const title = "Secret Binodon"; const text = "Secret Binodon - The #1 Platform for Viral Videos! 🎥 Watch the latest trending videos all in one place. Visit now!"; if (navigator.share) { navigator.share({ title: title, text: text, url: url }).catch((error) => console.log('Share failed', error)); } else { navigator.clipboard.writeText(`${text} ${url}`); showNotification("Website link copied! 📋"); } }
         window.sharePost = function(id, title) { const url = window.location.origin + `/movie/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }
-        let sliderInterval; function startCoverSlider(posts) { const sc = document.getElementById('cover-slider'); const recent = posts.slice(0, 10); if (recent.length <= 1) return; setTimeout(() => { const slidesHTML = recent.map(p => `<img src="${p.mediaImage}" fetchpriority="high" loading="eager">`).join(''); const sliderDiv = document.createElement('div'); sliderDiv.id = 'slider-inner'; sliderDiv.className = 'cover-photo-inner'; sliderDiv.innerHTML = slidesHTML + `<img src="${recent[0].mediaImage}">`; sc.appendChild(sliderDiv); let cur = 0; const total = recent.length; requestAnimationFrame(() => { sliderDiv.style.left = "0"; }); function run() { if (sliderInterval) clearInterval(sliderInterval); sliderInterval = setInterval(() => { cur++; sliderDiv.style.transition = "transform 0.8s cubic-bezier(0.4, 0, 0.2, 1)"; sliderDiv.style.transform = `translateX(-${cur * 100}%)`; if (cur === total) { setTimeout(() => { sliderDiv.style.transition = "none"; cur = 0; sliderDiv.style.transform = `translateX(0)`; }, 800); } }, 3000); } run(); document.addEventListener("visibilitychange", () => { if (document.hidden) clearInterval(sliderInterval); else run(); }); }, 2000); }
+        let sliderInterval; function startCoverSlider(posts) { const sc = document.getElementById('cover-slider'); const recent = posts.slice(0, 10); if (recent.length === 0) return; const slidesHTML = recent.map(p => `<img src="${p.mediaImage}" fetchpriority="high" loading="eager">`).join(''); sc.innerHTML = `<div id="slider-inner" class="cover-photo-inner">${slidesHTML}<img src="${recent[0].mediaImage}"></div>`; let cur = 0; const inner = document.getElementById('slider-inner'); const total = recent.length; function run() { if (sliderInterval) clearInterval(sliderInterval); sliderInterval = setInterval(() => { cur++; inner.style.transition = "transform 0.8s cubic-bezier(0.4, 0, 0.2, 1)"; inner.style.transform = `translateX(-${cur * 100}%)`; if (cur === total) { setTimeout(() => { inner.style.transition = "none"; cur = 0; inner.style.transform = `translateX(0)`; }, 800); } }, 3000); } run(); document.addEventListener("visibilitychange", () => { if (document.hidden) clearInterval(sliderInterval); else run(); }); }
        
                function adjustImageAspectRatio(imgElement) {
                const mediaContainer = imgElement.closest('.media-container');
