--- a/download.html
+++ b/download.html
@@ -200,7 +200,7 @@
     let finalLink = "";
 
     // গ্লোবাল ভিডিও লিঙ্ক ভেরিয়েবল
-    const GLOBAL_VIDEO_LINK = "https://google.com"; 
+    const GLOBAL_VIDEO_LINK = "https://prototypesorting.com/p99vwjq2?key=57217116cccb25526dfb6a5a4edd9aea"; 
 
     // ভিডিও প্লে ক্লিক লজিক (নিখুঁত রিয়েল টাইম)
     window.handleVideoClick = function() {
