--- a/download.html
+++ b/download.html
@@ -114,8 +114,18 @@
     <header>
         <div class="header-left"><div class="home-icon" onclick="window.location.href='index.html'"><i class="fa-solid fa-house"></i> Home</div></div>
         <div class="header-center">FILMIXO</div>
-        <div class="header-right"><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-whatsapp"></i><i class="fa-brands fa-telegram"></i></div>
-    </header>
+        <div class="header-right">
+    <a href="আপনার_ফেসবুক_লিঙ্ক_এখানে" target="_blank" style="color: white;">
+        <i class="fa-brands fa-facebook"></i>
+    </a>
+    <a href="https://t.me/filmixo_hub" target="_blank" style="color: white;">
+        <i class="fa-brands fa-whatsapp"></i>
+    </a>
+    <a href="https://t.me/filmixo_hub" target="_blank" style="color: white;">
+        <i class="fa-brands fa-telegram"></i>
+    </a>
+</div>
+</header>
 
 <div style="display: flex; justify-content: center; overflow: hidden; width: 100%; margin: 5px 0">
         <script type="text/javascript">
